[gd_scene load_steps=19 format=3 uid="uid://cm02gfex41gr0"]

[ext_resource type="PhysicsMaterial" uid="uid://dym3u238p6a81" path="res://barkley2/scenes/Player/o_hoopz_physics_material.tres" id="1_6d2l0"]
[ext_resource type="Script" uid="uid://fv07ud5nbmwf" path="res://barkley2/resources/B2_Hierarchy/Combat/Player.gd" id="2_6d2l0"]
[ext_resource type="PackedScene" uid="uid://c54kloot7bcu2" path="res://barkley2/scenes/Objects/System/o_shadow.tscn" id="2_vnb8r"]
[ext_resource type="Texture2D" uid="uid://dtgih8y1hd7r8" path="res://barkley2/assets/b2_original/images/merged/s_hoopz_lightcone.png" id="3_ac4jf"]
[ext_resource type="Script" uid="uid://cfxucydrvtfvi" path="res://barkley2/resources/B2_AI/ai_player.gd" id="3_ykikx"]
[ext_resource type="PackedScene" uid="uid://bcbxf4scjowqy" path="res://barkley2/scenes/_utilityStation/oStep_Smoke.tscn" id="4_1qnxd"]
[ext_resource type="Script" uid="uid://dnfb7mklmfjcp" path="res://barkley2/scenes/Player/gun_handler™.gd" id="4_kw4pa"]
[ext_resource type="SpriteFrames" uid="uid://24eor6kh3hdq" path="res://barkley2/resources/Player/hoopz_normal.tres" id="5_qxiei"]
[ext_resource type="SpriteFrames" uid="uid://be8tuhwe6258k" path="res://barkley2/resources/Player/combat_lower_body_normal.tres" id="6_u8bon"]
[ext_resource type="SpriteFrames" uid="uid://dh4nk0fc64erw" path="res://barkley2/resources/Player/combat_arm_back_normal.tres" id="7_grlyk"]
[ext_resource type="SpriteFrames" uid="uid://d1m3bdwt0blc0" path="res://barkley2/resources/Player/combat_upper_body_normal.tres" id="8_yicst"]
[ext_resource type="SpriteFrames" uid="uid://dgnkrv5sdn82d" path="res://barkley2/resources/Player/combat_weapon.tres" id="9_effw1"]
[ext_resource type="SpriteFrames" uid="uid://n7jvr12a1htv" path="res://barkley2/resources/Player/combat_weapon_parts.tres" id="9_ufjxn"]
[ext_resource type="SpriteFrames" uid="uid://ce5btxh5p4nbk" path="res://barkley2/resources/Player/combat_arm_front_normal.tres" id="10_7qowe"]
[ext_resource type="SpriteFrames" uid="uid://dvqqu8i44hek" path="res://barkley2/resources/Player/combat_weapon_spots.tres" id="10_ac4jf"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_ufjxn"]
polygon = PackedVector2Array(-7, -8, -7, -20, 0, -25, 7, -20, 7, -8, 7, -2, 0, 1, -7, -2)

[sub_resource type="CircleShape2D" id="CircleShape2D_aubae"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ufjxn"]
size = Vector2(4, 4)

[node name="o_hoopz" type="RigidBody2D" node_paths=PackedStringArray("combat_upper_sprite", "combat_lower_sprite", "combat_arm_back", "combat_arm_front", "combat_weapon", "combat_weapon_parts", "combat_weapon_spots", "gun_muzzle", "gun_handler", "hoopz_normal_body", "step_smoke", "hit_timer", "i_frame_timer", "flashlight_pivot", "flashlight", "ActorCol", "actor_ai")]
collision_layer = 1572865
collision_mask = 1572865
mass = 70.0
physics_material_override = ExtResource("1_6d2l0")
gravity_scale = 0.0
lock_rotation = true
contact_monitor = true
max_contacts_reported = 2
linear_damp = 10.0
script = ExtResource("2_6d2l0")
combat_upper_sprite = NodePath("combat_upper_body")
combat_lower_sprite = NodePath("combat_lower_body")
combat_arm_back = NodePath("combat_arm_back")
combat_arm_front = NodePath("combat_arm_front")
combat_weapon = NodePath("combat_weapon")
combat_weapon_parts = NodePath("combat_weapon_parts")
combat_weapon_spots = NodePath("combat_weapon_spots")
gun_muzzle = NodePath("gun_muzzle")
gun_handler = NodePath("Gun_Handler™")
hoopz_normal_body = NodePath("hoopz_normal_body")
step_smoke = NodePath("step_smoke")
hit_timer = NodePath("hit_timer")
i_frame_timer = NodePath("i_frame_timer")
flashlight_pivot = NodePath("flashlight_pivot")
flashlight = NodePath("flashlight_pivot/flashlight")
ActorCol = NodePath("hoopz_collision")
actor_ai = NodePath("B2_AI_Player")

[node name="B2_AI_Player" type="Node" parent="."]
script = ExtResource("3_ykikx")
metadata/_custom_type_script = "uid://cfxucydrvtfvi"

[node name="Gun_Handler™" type="Node" parent="."]
script = ExtResource("4_kw4pa")

[node name="pre_shooting_timer" type="Timer" parent="Gun_Handler™"]
one_shot = true

[node name="firing_rate" type="Timer" parent="Gun_Handler™"]
one_shot = true

[node name="post_shooting_timer" type="Timer" parent="Gun_Handler™"]
one_shot = true

[node name="o_Shadow" parent="." instance=ExtResource("2_vnb8r")]

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_ufjxn")
sdf_collision = false
occluder_light_mask = 3

[node name="flashlight_pivot" type="Marker2D" parent="."]
position = Vector2(0, -25)

[node name="flashlight" type="PointLight2D" parent="flashlight_pivot"]
position = Vector2(3, 53)
rotation = -1.5707964
scale = Vector2(0.5, 0.5)
range_z_max = 90
range_item_cull_mask = 3
shadow_enabled = true
shadow_item_cull_mask = 2
texture = ExtResource("3_ac4jf")
height = 16.0

[node name="hoopz_collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_aubae")

[node name="step_smoke" parent="." instance=ExtResource("4_1qnxd")]
position = Vector2(0, -1)
amount = 30

[node name="hoopz_normal_body" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
sprite_frames = ExtResource("5_qxiei")
animation = &"stand"
frame = 6
speed_scale = 1.5
centered = false
offset = Vector2(-22, -41)

[node name="aim_origin" type="Marker2D" parent="."]
position = Vector2(0, -16)

[node name="combat_lower_body" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = ExtResource("6_u8bon")
animation = &"walk_W"
centered = false
offset = Vector2(-22, -42)

[node name="combat_arm_back" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = ExtResource("7_grlyk")
animation = &"s_HoopzTorso_Dualguns"
centered = false
offset = Vector2(-22, -41)

[node name="combat_upper_body" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = ExtResource("8_yicst")
animation = &"s_HoopzTorso_Armless"
centered = false
offset = Vector2(-22, -41)

[node name="combat_weapon" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -18)
sprite_frames = ExtResource("9_effw1")
animation = &"s_AssaultRifle"

[node name="combat_weapon_parts" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -18)
sprite_frames = ExtResource("9_ufjxn")
animation = &"s_TranqRifle"

[node name="combat_weapon_spots" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -18)
sprite_frames = ExtResource("10_ac4jf")
animation = &"s_Smg"

[node name="combat_arm_front" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = ExtResource("10_7qowe")
animation = &"s_HoopzTorso_Handgun"
centered = false
offset = Vector2(-22, -41)

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="gun_muzzle" type="Marker2D" parent="."]

[node name="debug_text" type="Sprite2D" parent="gun_muzzle"]
visible = false
texture = SubResource("PlaceholderTexture2D_ufjxn")

[node name="hit_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="i_frame_timer" type="Timer" parent="."]
one_shot = true

[connection signal="frame_changed" from="hoopz_normal_body" to="." method="_on_hoopz_normal_body_frame_changed"]
[connection signal="frame_changed" from="combat_lower_body" to="." method="_on_combat_lower_body_frame_changed"]
